--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "vue": "^2.5.2",
+    "vue-jsonp": "^0.1.8",
     "vue-router": "^3.0.1",
-    "vuex": "^3.1.1"
+    "vuex": "^3.1.1",
+    "axios-jsonp-pro": "latest"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -32,6 +34,7 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "jsonp": "^0.2.1",
     "mint-ui": "^2.2.13",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
